# telegram-realty-ad-parser

./: .flake8  .gitignore  .pylintrc  AGENTS.md  CONCURRENCY_HANDLING.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LLM_PERFORMANCE_OPTIMIZATION.md  PERMANENT_URL_SETUP.md  README.md  WEBAPP_SETUP.md  ZAI_SETUP.md  check_filters.py  check_rate_limits.md  create_session.py  docker-compose.yml  env.example  find_processes.py  get_channel_info.py  get_subchannel_id.py  get_user_id.py  logging.ini  manual_auth_setup.py  migrate_message_status.py  mypy.ini  ngrok.yml  pyproject.toml  pytest.ini  requirements.txt  setup_auth_docker.py  setup_telegram_auth.py  start_dev.py  stop_all.sh  test_api_endpoint.py  test_price_filter_debug.py  test_serialization.py  test_subscriptions.py  update_ngrok_url.py
app/: __init__.py  exceptions.py  main.py  telegram_bot.py
docs/: architecture_diagram.md  ngrok-setup.md  telegram_review.md
scripts/: README.md  create_subscription_direct.py  generate_architecture_diagram.py  generate_models_diagram.py  generate_simple_diagram.py  ngrok.sh  restore_channels.py  restore_filters.py  safe_restart.sh  start_with_ngrok.sh  watchdog.py
tests/: README.md  conftest.py  test_api_user_channel_subscriptions.py  test_api_user_filters.py  test_architecture_integration.py  test_channel_parsing.py  test_channel_resolver.py  test_filter_matching.py  test_floor_parsing.py  test_llm_database.py  test_llm_integration.py  test_llm_parsing.py  test_llm_unit_simple.py  test_price_filter_api.py  test_price_filter_model.py  test_price_filter_service.py  (+11 more)
(+109 files in other folders)
